@@ -1,4 +1,5 @@
-* Introduction *
+Introduction
+============
 The SMF licence makes licencing mods rather complicated. This mod has three
 sources: code from SMF, original code, and images from the Tango Icon Library.
 
@@ -15,7 +16,8 @@ Some images are from the Tango Icon Library
 Creative Commons Attribution Share-Alike 2.5 licence
 (http://creativecommons.org/licenses/by-sa/2.5/).
 
-* Pretty URLs licence *
+Pretty URLs licence
+===================
 Copyright (c) 2006-2009 The Pretty URLs Contributors (see CONTRIBUTORS)
 All rights reserved.
 
